# demo-python-morse

./: README.md  main.py  pyproject.toml
morse/: beep.py  blink.py
